--- a/src/gui_new.glade
+++ b/src/gui_new.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.40.0 -->
+<!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkAdjustment" id="auto_scan_int_adj">
@@ -995,6 +995,23 @@ here</property>
               <placeholder/>
             </child>
             <child>
+              <object class="GtkButton" id="off_btn">
+                <property name="label" translatable="yes">Auto</property>
+                <property name="visible">True</property>
+                <property name="sensitive">False</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">3</property>
+              </packing>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
               <object class="GtkButton" id="exit_btn">
                 <property name="label" translatable="yes">Exit</property>
                 <property name="visible">True</property>
@@ -1004,7 +1021,7 @@ here</property>
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">3</property>
+                <property name="position">5</property>
               </packing>
             </child>
             <child>
